--- a/PhpbbInDotnet.Forum/wwwroot/css/Light.css
+++ b/PhpbbInDotnet.Forum/wwwroot/css/Light.css
@@ -123,16 +123,7 @@ button:disabled.MyButton, input:disabled.MyButton, button:disabled.MyButton:hove
 }
 
 .CollapsedMenu {
-    display: none;
-    border-radius: 3px;
     border: solid 1px black;
-    float: right;
-    padding: 3px;
-    margin: 3px;
-    cursor: pointer;
-    font-weight: bold;
-    min-width: 70px;
-    text-align: center;
 }
 
 .validation {
@@ -218,25 +209,7 @@ button:disabled.MyButton, input:disabled.MyButton, button:disabled.MyButton:hove
     background-color: #f1f1f1;
 }
 
-@media (max-width: 768px) {
-    .Summary {
-        display: none;
-        position: absolute;
-        clear: both;
-        width: auto !important;
-        min-width: unset;
-        height: auto !important;
-        border-radius: 3px;
-        border: solid 1px black;
-        background-color: white;
-        padding: 5px !important;
-    }
-
-        .Summary img {
-            display: none;
-        }
-
-    .CollapsedMenu {
-        display: inline-block;
-    }
+.Summary {
+    border: solid 1px black;
+    background-color: white;
 }
